# spark-kafka-stream-analytics

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
core/: config.py  logger.py
generator/: config.py  data_generator.py  kafka_producer.py  redis_loader.py  settings.py
kafka_producer/: producer.py  run_full_msg_producer.py  run_kafka_only_data_producer.py  run_kafka_with_redis_data_producer.py  run_simple_producer.py
redis_loader/: loader.py
spark-jobs/: config.py  main.py  schemas.py  sparky.py
sparky/: app.py  app_full_msg.py  app_kafka_only.py  app_kafka_with_redis.py  execute.sh  schema.py
